# osprey

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  RELEASE_NOTES.md  TESTING_GUIDE.md  env.example  pyproject.toml  pytest.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml  release.yml
docker/: ariel-dev.yml
docs/: LOCAL_TESTING.md  Makefile  launch_docs.py
docs/changes/: fix-json-boolean-parsing.md
docs/resources/other/: COMMENTS.md  COMMIT_ORGANIZATION.md  DOCSTRINGS.md  RELEASE_WORKFLOW.md  UPDATE_DOCS.md  see_also.md
docs/source/: conf.py  index.rst
docs/source/_ext/: workflow_autodoc.py
docs/source/_static/: custom.css  workflow-autodoc.css
docs/source/api_reference/: index.rst
docs/source/contributing/: 01_git-and-github.rst  02_code-standards.rst  03_ai-assisted-development.rst  04_community.rst  index.rst
docs/source/developer-guides/: index.rst  migration-guide-instance-methods.rst
docs/source/example-applications/: als-assistant.rst  index.rst
docs/source/getting-started/: conceptual-tutorial.rst  control-assistant-part1-setup.rst  control-assistant-part2-channel-finder.rst  control-assistant-part3-production.rst  control-assistant-part4-customization.rst  hello-world-tutorial.rst  index.rst  installation.rst
docs/workflows/: README.md  channel-finder-database-builder.md  comments.md  pre-merge-cleanup.md  testing-workflow.md
scripts/: README.md  analyze_test_coverage.py  capture_ariel_screenshots.py  ci_check.sh  premerge_check.sh  quick_check.sh
src/: setup.py
src/osprey/: __init__.py
src/osprey/approval/: __init__.py  approval_manager.py  approval_system.py  config_models.py  (+1 more)
tests/: __init__.py  conftest.py  test_artifacts.py  test_tui_artifacts.py
tests/approval/: __init__.py  test_approval_manager.py
tests/base/: __init__.py  test_capability_helpers.py  test_slash_commands.py
tests/capabilities/: conftest.py  test_archiver_retrieval_capability.py  test_channel_finding_capability.py  test_channel_read_capability.py  test_channel_write_approval_integration.py  test_channel_write_capability.py  test_channel_write_safety.py  test_context_tools.py  test_memory_capability.py  test_python_capability.py  test_time_range_parsing_capability.py
tests/cli/: test_channel_finder_cmd.py  test_chat_cmd.py  test_claude_config_generation.py  test_config_cmd.py  test_deploy_cmd.py  test_eject_cmd.py  test_export_config_cmd.py  test_generate_cmd.py  test_generate_soft_ioc.py  test_health_cmd.py  test_interactive_menu.py  test_main.py  test_migrate_cmd.py  test_preview_styles.py  test_registry_cmd.py  test_registry_reset.py  test_remove_cmd.py  test_tasks_cmd.py  test_templates.py
tests/config/: test_config_builder.py
tests/connectors/: __init__.py  test_auto_verification.py  test_connector_factory.py  test_epics_archiver_connector.py  test_mock_connector.py  test_pattern_detection.py  test_write_verification.py
tests/context/: test_context_manager.py
tests/deployment/: __init__.py  test_container_status.py  test_loader.py  test_runtime_helper.py
tests/documentation/: test_workflow_autodoc.py
tests/e2e/: README.md  __init__.py  _e2e_watermark_enhancer.py  _e2e_watermark_search.py  conftest.py  judge.py  test_ariel_e2e_pipeline.py  test_ariel_search.py  test_channel_finder_benchmarks.py  test_channel_finder_queries.py  test_claude_code_skills.py  test_code_generator_workflows.py  test_llm_channel_namer.py  test_llm_providers.py  test_mcp_capability_generation.py  test_reactive_approval_e2e.py  test_runtime_limits.py  test_runtime_utilities.py  test_tutorials.py
tests/events/: conftest.py  test_handlers.py  test_parser.py  test_streaming.py  test_types.py
tests/generators/: __init__.py  test_config_updater.py  test_config_updater_control_system.py  test_config_updater_epics.py  test_ioc_backends.py  test_models.py  test_registry_updater.py  test_soft_ioc_template.py
tests/infrastructure/: conftest.py  test_classification_node.py  test_error_node.py  test_gateway_approval.py  test_gateway_approval_integration.py  test_gateway_capability_commands.py  test_infrastructure_decorator.py  test_orchestration_node.py  test_reactive_orchestrator_node.py  test_reactive_routing.py  test_reactive_tools.py  test_respond_node.py  test_router_node.py  test_task_extraction_node.py  test_validate_single_step.py
tests/integration/: test_capability_slash_commands.py  test_e2e_workflow.py  test_python_executor_service.py  test_reactive_approval.py  test_reactive_loop.py  test_soft_ioc_server.py
tests/interfaces/: __init__.py
tests/migrate/: test_v011_migration.py
tests/models/: test_argo_structured.py  test_completion.py  test_completion_chat_request.py  test_factory.py  test_langchain_factory.py  test_litellm_adapter.py  test_litellm_adapter_chat_request.py  test_logging.py  test_messages.py  test_providers_anthropic.py  test_providers_argo.py  test_providers_ollama.py
tests/prompts/: __init__.py  conftest.py  test_ariel_prompt_builders.py  test_base_prompt_builder.py  test_capability_guide_builders.py  test_channel_finder_prompt_builders.py  test_clarification_prompt.py  test_classification_prompt.py  test_default_prompt_provider.py  test_error_analysis_prompt.py  test_logbook_search_prompt.py  test_memory_extraction_prompt.py  test_orchestrator_prompt.py  test_python_prompt.py  test_response_generation_prompt.py  test_task_extraction_prompt.py  test_time_range_parsing_prompt.py
tests/registry/: test_ariel_module_registrations.py  test_ariel_module_registry_integration.py  test_native_control_capabilities.py  test_provider_filtering.py  test_provider_registration.py  test_registry_helpers.py  test_registry_isolation.py  test_registry_loading.py  test_registry_modes.py  test_registry_validation.py  test_shadow_warning.py
tests/runtime/: __init__.py  test_runtime.py  test_runtime_integration.py
tests/services/: __init__.py
tests/state/: test_agent_control_state.py
tests/utils/: test_log_filter.py  test_logger.py
(+704 files in other folders)
