[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osprey-framework"
version = "0.10.0"
description = "An open-source, domain-agnostic, capability-based architecture for building intelligent agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Thorsten Hellert", email = "thellert@lbl.gov"},
]
maintainers = [
    {name = "Thorsten Hellert", email = "thellert@lbl.gov"},
]
keywords = [
    "ai", "agents", "framework", "scientific-computing", "langgraph",
    "epics", "accelerator-physics", "als", "berkeley", "agent-framework",
    "capability-based", "human-in-the-loop", "container-orchestration"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

# Core runtime dependencies from requirements.txt analysis
dependencies = [
    # LangGraph dependencies - CRITICAL VERSION REQUIREMENTS
    "langgraph>=0.5.2",
    "langchain-core>=0.3.68",
    "langgraph-sdk>=0.1.70,<0.4.0",

    # Core framework dependencies
    "rich>=14.0.0",
    "click>=8.1.0",
    "questionary>=2.0.0",
    "python-dotenv>=1.1.0",
    "PyYAML>=6.0.2",
    "Jinja2>=3.1.6",
    "requests>=2.32.3",

    # Container runtime (Docker or Podman) must be installed separately via system package managers
    # Framework uses CLI tools (docker/podman commands), not Python packages
    # Install Docker Desktop 4.0+ OR Podman 4.0+:
    #   - Docker: https://docs.docker.com/get-docker/
    #   - Podman: https://podman.io/getting-started/installation

    # Jupyter notebook support
    "nbformat>=5.0.0",
    "nbclient",

    # AI/ML provider integrations
    "litellm>=1.56.0",  # Unified LLM provider interface (100+ providers)
    "openai",
    "anthropic",
    "google-generativeai",
    "ollama>=0.5.1",

    # Advanced code generation
    "claude-agent-sdk>=0.0.20",  # Claude Code SDK for multi-turn agentic code generation

    # Data processing - required for archiver connectors and data handling
    # Archiver connectors return pandas DataFrames for time-series data
    "pandas>=2.2.3",
    "numpy>=2.2.6",  # Required by pandas
    "matplotlib>=3.10.3",  # Required for Python capability visualization (core use case)

    # Networking and protocols
    "websocket-client>=1.7.0",
    "urllib3>=2.4.0",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.2",
    "idna>=3.10",
    "MarkupSafe>=3.0.2",

    # Terminal User Interface (TUI) - Textual-based full-screen interface
    "textual>=0.70.0",
]

[project.optional-dependencies]
# Documentation dependencies
docs = [
    "sphinx>=8.0.0",
    "pydata-sphinx-theme",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinx-design",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-jsmath>=1.0.1",
    "graphviz",
]

# Scientific computing stack - additional packages for Python execution capability
# Note: pandas, numpy, and matplotlib are in base requirements (needed for core functionality)
# These packages are available in the execution environment for advanced data analysis
scientific = [
    "scipy>=1.15.3",
    "seaborn",
    "scikit-learn",
    "ipywidgets",  # Interactive widgets for Jupyter notebooks
]

# Database and storage
databases = [
    "pymongo",
    "neo4j",
    "qdrant-client",
]

# PostgreSQL checkpointing (production persistence)
postgres = [
    "langgraph-checkpoint-postgres>=2.0.22,<4.0.0",
    "psycopg[pool]>=3.1.0,<4.0.0",
    "psycopg-pool>=3.1.0,<4.0.0",
    "langchain-postgres>=0.0.12,<0.1.0",
]

# Memory and vector storage
memory = [
    "mem0ai>=0.1.88",
    "vecs>=0.4.5",
]

# Development and testing
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",  # Code coverage reporting
    "pytest-vcr",  # Optional: For recording/replaying API interactions
    "vcrpy",
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "ruff",
    "pyepics",  # EPICS connector support for testing
]

# Terminal User Interface
tui = [
    "textual>=0.70.0",
]

# Natural language processing
nlp = [
    "nltk>=3.8.1",
]

# Utilities
utils = [
    "unique-namer>=0.1.0",
]

# All optional dependencies for complete installation
all = [
    "osprey-framework[docs,scientific,databases,postgres,memory,dev,tui,nlp,utils]"
]

[project.urls]
Homepage = "https://als-apg.github.io/osprey"
Documentation = "https://als-apg.github.io/osprey"
Repository = "https://github.com/als-apg/osprey"
Paper = "https://arxiv.org/abs/2508.15066"
Issues = "https://github.com/als-apg/osprey/issues"
Changelog = "https://github.com/als-apg/osprey/blob/main/CHANGELOG.md"

# Define console scripts for CLI entry points
[project.scripts]
# Main CLI entry point (Click group with subcommands)
osprey = "osprey.cli.main:cli"

# Legacy entry points (maintained for backward compatibility)
alpha-berkeley = "osprey.interfaces.cli.direct_conversation:main"
alpha-berkeley-deploy = "osprey.deployment.container_manager:main"

# Package discovery configuration for src layout
[tool.setuptools.packages.find]
where = ["src"]
include = ["osprey*"]

# Include package data files
[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.json", "*.j2", "*.md", "*.txt", "*.cfg", "*.ini"]
"osprey" = [
    "config.yml",
    "templates/**/*",
    "templates/**/*.j2",
    "templates/**/*.py",
    "templates/**/*.yml",
    "templates/**/*.yaml",
    "templates/**/*.md",
    "templates/**/*.txt",
    "templates/**/*.sh",
    "templates/**/*.css",
    "templates/**/*.js",
    "templates/**/*.json",
    "workflows/*.md",  # Legacy workflow files (deprecated, use assist/)
    "assist/**/*.md",  # Coding assistant task instructions
    "assist/**/*.yml",  # Migration documents and schemas
    "assist/**/*.yaml",
]

# Development tool configurations
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude auto-generated files
  build/
  | dist/
  | venv/
  | \.venv/
  | _agent_data/
  | \.git/
  | __pycache__/
  | \.pytest_cache/
  | \.mypy_cache/
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "interfaces", "deployment"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    "venv/",
    "_agent_data/",
    "__pycache__/",
]

# Specific modules to ignore due to optional dependencies
[[tool.mypy.overrides]]
module = [
    "openai.*",
    "anthropic.*",
    "google.*",
    "ollama.*",
    "litellm.*",
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "pyepics.*",
    "pymongo.*",
    "neo4j.*",
    "qdrant_client.*",
    "mem0.*",
    "langfuse.*",
    "langgraph.*",
    "langchain.*",
    "podman.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
    "src/applications/*/tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# Ruff configuration for modern Python linting
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "interfaces", "deployment"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["B011", "B017", "B018"]  # Allow assert False, useless attribute access, assert blind exception
"tests/e2e/conftest.py" = ["F811"]  # Allow pytest hook redefinition
"tests/registry/test_registry_isolation.py" = ["F401"]  # Intentional unused import for testing
"tests/documentation/test_workflow_autodoc.py" = ["E402"]  # Late imports after path manipulation
"tests/services/channel_finder/test_registration.py" = ["E402"]  # Late imports after path manipulation
"src/osprey/templates/apps/control_assistant/_agent_data/example_scripts/**/*.py" = ["E402"]  # Example scripts with late imports
"src/osprey/templates/services/jupyter/startup_script.py" = ["F401"]  # Intentionally loaded in namespace
"src/osprey/templates/apps/control_assistant/services/channel_finder/__init__.py" = ["E402"]  # Conditional imports

[tool.ruff.lint.isort]
known-first-party = ["osprey", "configs", "applications", "interfaces", "deployment"]

# Coverage configuration (if using pytest-cov)
[tool.coverage.run]
source = ["src", "interfaces", "deployment"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.*",
    "build/*",
    "dist/*",
    "venv/*",
    "_agent_data/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
